--- a/YoutubePlaylistAPI/Forms/AuthForm.resx
+++ b/YoutubePlaylistAPI/Forms/AuthForm.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAPY6AQD2OgEAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAAAABAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAwAAAAAAAAAAAAAADAAA
+        AD8AAABxAAAAkwAAAKQAAACkAAAAlAAAAHIAAAA/AAAADAAAAAAAAAAAAAAAAwAAAAEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAIAAAAAAAAAKwAA
+        AJkAAADpAAAA/wAAAP4AAAD/AAAA/wAAAP8AAAD/AAAA/gAAAP8AAADpAAAAmQAAACsAAAAAAAAAAgAA
+        AAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAAAAAAAEAAA
+        AJgAAAD8AAAA/wAAAP8AAAD9AAAA+wAAAPoAAAD6AAAA+gAAAPoAAAD7AAAA/QAAAP8AAAD/AAAA/AAA
+        AJkAAAARAAAAAAAAAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAA
+        ADYAAADgAAAA/wAAAPwAAAD7AAAA/QAAAPsAAAD8AAAA/wAAAP8AAAD/AAAA/wAAAPwAAAD7AAAA/QAA
+        APsAAAD8AAAA/wAAAOAAAAA2AAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwAA
+        AAAAAABIAAAA9wAAAP8AAAD7AAAA/gAAAPwAAAD+AAAA/wAAAP8AAAD8AAAA8AAAAPAAAAD8AAAA/wAA
+        AP8AAAD+AAAA/AAAAP4AAAD7AAAA/wAAAPcAAABIAAAAAAAAAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAMAAAAAAAAAOQAAAPYAAAD/AAAA/AAAAP8AAAD8AAAA/wAAAPQAAACiAAAAUQAAACUAAAAUAAAAFAAA
+        ACUAAABRAAAAogAAAPQAAAD/AAAA/AAAAP8AAAD8AAAA/wAAAPYAAAA5AAAAAAAAAAMAAAAAAAAAAAAA
+        AAAAAAABAAAAAAAAABMAAADcAAAA/wAAAPwAAAD/AAAA/AAAAP8AAACoAAAAHAAAAAAAAAABAAAAAAAA
+        AAAAAAAAAAAAAAAAAAEAAAAAAAAAHAAAAKgAAAD/AAAA/AAAAP8AAAD8AAAA/wAAANwAAAATAAAAAAAA
+        AAEAAAAAAAAAAAAAAAMAAAAAAAAAlwAAAP8AAAD7AAAA/wAAAP0AAAD/AAAAbAAAAAAAAAACAAAABAAA
+        AAEAAAAFAAAAAgAAAAEAAAACAAAABAAAAAMAAAABAAAAAAAAAGwAAAD/AAAA/QAAAP8AAAD7AAAA/wAA
+        AJcAAAAAAAAAAwAAAAAAAAACAAAAAAAAADAAAAD7AAAA/wAAAP4AAAD9AAAA/wAAAG0AAAAAAAAABQAA
+        AAIAAAADAAAACwAAAAAAAAACAAAAAgAAAAAAAAAAAAAAAAAAAAIAAAAFAAAAAAAAAG0AAAD/AAAA/AAA
+        AP4AAAD/AAAA+wAAAC8AAAAAAAAAAgAAAAQAAAAAAAAAlwAAAP8AAAD7AAAA/AAAAP8AAACkAAAAAAAA
+        AAUAAAACAAAAAAAAAJkAAAD2AAAAeAAAAAEAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAEAAAAFAAAAAAAA
+        AKQAAAD/AAAA/AAAAPsAAAD/AAAAlwAAAAAAAAAEAAAAAAAAAA0AAADlAAAA/wAAAP0AAAD/AAAA8wAA
+        ACMAAAAAAAAAAwAAAAAAAAAQAAAA7AAAAP8AAAD/AAAAwgAAACIAAAAAAAAABAAAAAIAAAAAAAAAAAAA
+        AAIAAAAAAAAAIwAAAPMAAAD/AAAA/QAAAP8AAADlAAAADQAAAAAAAAAAAAAAPwAAAP8AAAD9AAAA+wAA
+        AP8AAAChAAAAAAAAAAQAAAABAAAAAAAAABEAAADrAAAA/wAAAPoAAAD/AAAA8gAAAGEAAAAAAAAAAgAA
+        AAMAAAAAAAAAAAAAAAQAAAAAAAAAoQAAAP8AAAD7AAAA/QAAAP8AAAA/AAAAAAAAAAAAAABwAAAA/wAA
+        APsAAAD8AAAA/wAAAFQAAAAAAAAAAwAAAAEAAAAAAAAAEQAAAO4AAAD/AAAA/gAAAPwAAAD8AAAA/wAA
+        AKwAAAATAAAAAAAAAAIAAAAAAAAAAwAAAAAAAABUAAAA/wAAAPwAAAD7AAAA/wAAAHAAAAAAAAAAAAAA
+        AJIAAAD/AAAA+gAAAP8AAAD9AAAAKAAAAAAAAAACAAAAAQAAAAAAAAARAAAA7gAAAP8AAAD+AAAA/wAA
+        AP4AAAD7AAAA/wAAAOYAAABJAAAAAAAAAAIAAAACAAAAAAAAACgAAAD9AAAA/wAAAPoAAAD/AAAAkgAA
+        AAAAAAAAAAAAowAAAP8AAAD6AAAA/wAAAPAAAAAVAAAAAAAAAAEAAAABAAAAAAAAABEAAADuAAAA/wAA
+        AP4AAAD/AAAA/wAAAP8AAAD8AAAA/gAAAP8AAAA6AAAAAAAAAAQAAAAAAAAAFQAAAPAAAAD/AAAA+gAA
+        AP8AAACjAAAAAAAAAAAAAACjAAAA/wAAAPoAAAD/AAAA8AAAABUAAAAAAAAAAQAAAAEAAAAAAAAAEQAA
+        AO4AAAD/AAAA/gAAAP8AAAD/AAAA/wAAAPwAAAD+AAAA/wAAADoAAAAAAAAABAAAAAAAAAAVAAAA8AAA
+        AP8AAAD6AAAA/wAAAKMAAAAAAAAAAAAAAJIAAAD/AAAA+gAAAP8AAAD9AAAAKAAAAAAAAAACAAAAAQAA
+        AAAAAAARAAAA7gAAAP8AAAD+AAAA/wAAAP4AAAD7AAAA/wAAAOYAAABJAAAAAAAAAAIAAAACAAAAAAAA
+        ACgAAAD9AAAA/wAAAPoAAAD/AAAAkgAAAAAAAAAAAAAAcAAAAP8AAAD7AAAA/AAAAP8AAABUAAAAAAAA
+        AAMAAAABAAAAAAAAABEAAADuAAAA/wAAAP4AAAD8AAAA/AAAAP8AAACsAAAAEwAAAAAAAAACAAAAAAAA
+        AAMAAAAAAAAAVAAAAP8AAAD8AAAA+wAAAP8AAABwAAAAAAAAAAAAAAA/AAAA/wAAAP0AAAD7AAAA/wAA
+        AKEAAAAAAAAABAAAAAEAAAAAAAAAEQAAAOsAAAD/AAAA+gAAAP8AAADyAAAAYQAAAAAAAAACAAAAAwAA
+        AAAAAAAAAAAABAAAAAAAAAChAAAA/wAAAPsAAAD9AAAA/wAAAD8AAAAAAAAAAAAAAA0AAADlAAAA/wAA
+        AP0AAAD/AAAA8wAAACMAAAAAAAAAAwAAAAAAAAAQAAAA7AAAAP8AAAD/AAAAwgAAACIAAAAAAAAABAAA
+        AAIAAAAAAAAAAAAAAAIAAAAAAAAAIwAAAPMAAAD/AAAA/QAAAP8AAADlAAAADQAAAAAAAAAEAAAAAAAA
+        AJcAAAD/AAAA+wAAAPwAAAD/AAAApAAAAAAAAAAFAAAAAgAAAAAAAACZAAAA9gAAAHgAAAABAAAAAAAA
+        AAQAAAAAAAAAAAAAAAAAAAABAAAABQAAAAAAAACkAAAA/wAAAPwAAAD7AAAA/wAAAJcAAAAAAAAABAAA
+        AAIAAAAAAAAAMAAAAPsAAAD/AAAA/gAAAP0AAAD/AAAAbAAAAAAAAAAFAAAAAQAAAAMAAAALAAAAAAAA
+        AAIAAAACAAAAAAAAAAAAAAAAAAAAAgAAAAUAAAAAAAAAbAAAAP8AAAD9AAAA/gAAAP8AAAD7AAAAMAAA
+        AAAAAAACAAAAAAAAAAMAAAAAAAAAlwAAAP8AAAD7AAAA/wAAAP0AAAD/AAAAbAAAAAAAAAACAAAABAAA
+        AAEAAAAFAAAAAgAAAAEAAAACAAAABAAAAAMAAAABAAAAAAAAAGwAAAD/AAAA/QAAAP8AAAD7AAAA/wAA
+        AJcAAAAAAAAAAwAAAAAAAAAAAAAAAQAAAAAAAAATAAAA3AAAAP8AAAD8AAAA/wAAAPwAAAD/AAAAqAAA
+        ABwAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAABwAAACnAAAA/wAAAPwAAAD/AAAA/AAA
+        AP8AAADcAAAAEwAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAwAAAAAAAAA5AAAA9gAAAP8AAAD8AAAA/wAA
+        APwAAAD/AAAA9AAAAKIAAABRAAAAJQAAABQAAAAUAAAAJQAAAFEAAACiAAAA8wAAAP8AAAD8AAAA/wAA
+        APwAAAD/AAAA9gAAADkAAAAAAAAAAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwAAAAAAAABIAAAA9wAA
+        AP8AAAD7AAAA/gAAAPwAAAD+AAAA/wAAAP8AAAD8AAAA8AAAAPAAAAD8AAAA/wAAAP8AAAD+AAAA/AAA
+        AP4AAAD7AAAA/wAAAPcAAABIAAAAAAAAAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAA
+        AAAAAAA2AAAA4AAAAP8AAAD8AAAA+wAAAP0AAAD7AAAA/AAAAP8AAAD/AAAA/wAAAP8AAAD8AAAA+wAA
+        AP0AAAD7AAAA/AAAAP8AAADhAAAANgAAAAAAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAwAAAAAAAAAQAAAAmQAAAPwAAAD/AAAA/wAAAP0AAAD7AAAA+gAAAPoAAAD6AAAA+gAA
+        APsAAAD9AAAA/wAAAP8AAAD8AAAAmQAAABEAAAAAAAAAAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAIAAAAAAAAAKwAAAJkAAADpAAAA/wAAAP4AAAD/AAAA/wAA
+        AP8AAAD/AAAA/gAAAP8AAADqAAAAmQAAACsAAAAAAAAAAgAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAMAAAAAAAAAAAAAAAwAAAA/AAAAcQAA
+        AJQAAACkAAAApAAAAJQAAAByAAAAPwAAAAwAAAAAAAAAAAAAAAMAAAABAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAAEAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/IvRP/ogBF/kgAEnygAAU9QAACuoAAAVUAAACiAJkAQgIAQEQEJSAkCQ
+        GQKAoEkBgSAmgYEgCoGBIASBgSACgYEgAoGBIASBgSAKgYEgJoGAoEkBQJAZAkBCUgIgIAQEIAmQBFAA
+        AAqoAAAV1AAAK8oAAFPkgAEn+iAEX/yL0T8=
+</value>
+  </data>
 </root>
